--- a/angularjs/angularjs-test/test03.html
+++ b/angularjs/angularjs-test/test03.html
@@ -6,7 +6,7 @@
 </head>
 <script src="js/angular.min.js"></script>
 <head>
-    <title>入门小Demo-3  初始化</title>
+    <title>入门小Demo-3  初始化</title>2018/10/19
     <script>
         var app=angular.module('myApp',[]); //定义了一个叫myApp的模块
         //定义控制器
